# Logging_service

./: .env.template  docker-compose.yaml  logs.txt  makefile  pyproject.toml
src/: main.py
